<resources>
    <string name="app_name">cdgs_training</string>
    <string name="btn_insert">Insert</string>
    <string name="user_id">User Id:</string>
    <string name="dump_text">-</string>
    <string name="full_name">Fullname:</string>
    <string name="age">Age:</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="hint_age">Age</string>
    <string name="facebook">Facebook</string>
    <string name="line_id">Line Id</string>
    <string name="instrgram">Instagram</string>
    <string name="userid">User Id</string>
</resources>