<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertActivity">

    <EditText
        android:id="@+id/edtFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edtFirstName"
        app:layout_constraintStart_toStartOf="@+id/edtFirstName"
        app:layout_constraintTop_toBottomOf="@+id/edtFirstName" />

    <EditText
        android:id="@+id/edtAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_age"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edtLastName"
        app:layout_constraintStart_toStartOf="@+id/edtLastName"
        app:layout_constraintTop_toBottomOf="@+id/edtLastName" />

    <EditText
        android:id="@+id/edtFacebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/facebook"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edtAge"
        app:layout_constraintStart_toStartOf="@+id/edtAge"
        app:layout_constraintTop_toBottomOf="@+id/edtAge" />

    <EditText
        android:id="@+id/edtLineId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/line_id"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edtFacebook"
        app:layout_constraintStart_toStartOf="@+id/edtFacebook"
        app:layout_constraintTop_toBottomOf="@+id/edtFacebook" />

    <EditText
        android:id="@+id/edtInstrgram"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/instrgram"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edtLineId"
        app:layout_constraintStart_toStartOf="@+id/edtLineId"
        app:layout_constraintTop_toBottomOf="@+id/edtLineId" />

    <Button
        android:id="@+id/btnInsert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btn_insert"
        app:layout_constraintEnd_toEndOf="@+id/edtInstrgram"
        app:layout_constraintStart_toStartOf="@+id/edtInstrgram"
        app:layout_constraintTop_toBottomOf="@+id/edtInstrgram" />
</androidx.constraintlayout.widget.ConstraintLayout>